DFR-1895: High Court Seal - uploaded documents